src/objects/Case_Subscription_History__c.object
<CustomObject>
    <fields>
        <fullName>CASE_Inactive_Sub_Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>CASE Inactive Sub Legacy Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <formula>Case__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Replacement_Required__c</fullName>
        <formula>Case__r.Replacement_Required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Replacement Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Within_Cir_Schedule__c</fullName>
        <formula>Case__r.Within_Circulation_Planning_Schedule__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Within Cir Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Subscription Histories</relationshipLabel>
        <relationshipName>Case_Subscription_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complaint_Copies__c</fullName>
        <label>Complaint Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complaint_From__c</fullName>
        <label>Complaint From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complaint_To__c</fullName>
        <label>Complaint To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Copies__c</fullName>
        <label>Credit Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goodwill_Amount__c</fullName>
        <label>Goodwill Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Goodwill_Copies__c</fullName>
        <label>Goodwill Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_No__c</fullName>
        <label>Issue No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_By__c</fullName>
        <label>Legacy Create By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_Date__c</fullName>
        <label>Legacy Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_By__c</fullName>
        <label>Legacy Update By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_Date__c</fullName>
        <label>Legacy Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Subscription_History_ID__r.Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <label>Publication</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replace_Copies__c</fullName>
        <label>Replace Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Replace_From__c</fullName>
        <label>Replace From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Replace_To__c</fullName>
        <label>Replace To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Replacement_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replacement Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <formula>TEXT( Case__r.Sub_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_History_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription History ID</label>
        <referenceTo>Subscription_History__c</referenceTo>
        <relationshipLabel>Case Subscription Histories</relationshipLabel>
        <relationshipName>Case_Subscription_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Debit__c</fullName>
        <label>Vendor Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <formula>Subscription_History_ID__r.Vendor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Case Subscription History</label>
    <nameField>
        <displayFormat>CS{0000000000}</displayFormat>
        <label>Case Subscription History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Subscription Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>